--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,16 +23,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
+
+    - uses: actions/setup-java@v3
       with:
+        distribution: 'zulu'
         java-version: '17'
-        distribution: 'adopt'
-
     - name: Grant execute permission for gradlew
-      run: chmod +x ./gradlew
-      shell: bash
-
+      run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
-      shell: bash
+      run: ./gradlew clean build
