--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,12 +23,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-
-    - uses: actions/setup-java@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
       with:
-        distribution: 'zulu'
         java-version: '17'
+        distribution: 'adopt'
+
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      run: chmod +x ./gradlew
+      shell: bash
+
     - name: Build with Gradle
-      run: ./gradlew clean build
+      run: ./gradlew build
+      shell: bash
