fix(test) : 테스트 복구

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/todoParty
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://todo-database.cqbocwf5wbsu.ap-northeast-2.rds.amazonaws.com:3306/todoParty
+spring.datasource.username=admin
+spring.datasource.password=admin123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
