--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,3 +32,23 @@ jobs:
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
       with:
         arguments: build
+
+    - name: Make zip file #1
+      run: zip -qq -r ./$GITHUB_SHA.zip .
+      shell: bash
+
+    - name: Configure AWS credentials #2
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.ACCESS_KEY_SECRET }}
+        aws-region: ap-northeast-2
+
+    - name: Upload to S3 #3
+      run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://awsdeploybucket/$GITHUB_SHA.zip
+
+    - name: Code Deploy #4
+      run: aws deploy create-deployment --application-name todoParty
+        --deployment-config-name CodeDeployDefault.OneAtATime
+        --deployment-group-name dev
+        --s3-location bucket=awsdeploybucket,bundleType=zip,key=$GITHUB_SHA.zip
